<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity"
    android:windowSoftInputMode="stateHidden">

    <TextView
        android:id="@+id/editText"
        android:layout_width="381dp"
        android:layout_height="150dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="173dp"
        android:autofillHints="@string/dot"
        android:ems="10"
        android:gravity="end"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/exp"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#77FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonClr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextViewEdits" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="381dp"
        android:layout_height="140dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="33dp"
        android:gravity="top|end"
        android:textColor="#a1ff85"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonClr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonClr"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginBottom="6dp"
        android:text="@string/clear"
        android:textSize="32sp"
        android:textStyle="bold"
        app:backgroundTint="?android:attr/colorActivatedHighlight"
        app:layout_constraintBottom_toTopOf="@+id/buttonSeven"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:text="@string/dot"
        android:textColor="@android:color/holo_green_light"
        android:textSize="40sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonEight"
        app:layout_constraintStart_toEndOf="@+id/buttonClr" />

    <Button
        android:id="@+id/buttonPer"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:text="@string/per"
        android:textColor="@android:color/holo_green_light"
        android:textSize="40sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonNine"
        app:layout_constraintStart_toEndOf="@+id/buttonDot" />

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:text="@string/div"
        android:textColor="@android:color/holo_green_light"
        android:textSize="45sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonMul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPer" />

    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:text="@string/seven"
        android:textColor="#D5FFD4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonFour"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEight"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:text="@string/eight"
        android:textColor="#D5FFD4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonFive"
        app:layout_constraintStart_toEndOf="@+id/buttonSeven" />

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:text="@string/nine"
        android:textColor="#D5FFD4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonSix"
        app:layout_constraintStart_toEndOf="@+id/buttonEight" />

    <Button
        android:id="@+id/buttonMul"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/mul"
        android:textColor="@android:color/holo_green_light"
        android:textSize="45sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNine" />

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:text="@string/four"
        android:textColor="#D5FFD4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonOne"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:text="@string/five"
        android:textColor="#D5FFD4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonTwo"
        app:layout_constraintStart_toEndOf="@+id/buttonFour" />

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:text="@string/six"
        android:textColor="#D5FFD4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonThree"
        app:layout_constraintStart_toEndOf="@+id/buttonFive" />

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/sub"
        android:textColor="@android:color/holo_green_light"
        android:textSize="45sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonNine" />

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:text="@string/one"
        android:textColor="#D5FFD4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonBracket"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:text="@string/two"
        android:textColor="#D5FFD4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonZero"
        app:layout_constraintStart_toEndOf="@+id/buttonOne" />

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:text="@string/three"
        android:textColor="#D5FFD4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonErase"
        app:layout_constraintStart_toEndOf="@+id/buttonTwo" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="6dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="@android:color/holo_green_light"
        android:textSize="45sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonEqual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonThree" />

    <Button
        android:id="@+id/buttonBracket"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginBottom="13dp"
        android:background="@color/white"
        android:text="@string/brackets"
        android:textColor="#D5FFD4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="13dp"
        android:background="@color/white"
        android:text="@string/zero"
        android:textColor="#D5FFD4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonBracket" />

    <Button
        android:id="@+id/buttonErase"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="13dp"
        android:background="@color/white"
        android:textColor="#D5FFD4"
        android:textSize="32sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:icon="@android:drawable/ic_input_delete"
        app:iconGravity="end|textEnd"
        app:iconPadding="30dp"
        app:iconSize="50dp"
        app:iconTint="#D5FFD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonZero" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="90dp"
        android:layout_height="70dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:layout_marginBottom="13dp"
        android:text="@string/equal"
        android:textSize="32sp"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonErase" />

</androidx.constraintlayout.widget.ConstraintLayout>